--- a/src/App.css
+++ b/src/App.css
@@ -4,15 +4,15 @@
 
 .app {
   min-height: 100vh;
-  background-image: linear-gradient(95deg, #0b1b83, #122bcd);
+  background-color: #39445a;
   color: white;
-  padding-top: 75px;
+  padding-top: 130px;
   padding-bottom: 70px;
 }
 
 @media (max-width: 700px) {
   .app {
-    padding-top: 50px;
+    padding-top: 70px;
   }
 }
 
