--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 
 .app {
   min-height: 100vh;
-  background-color: #39445a;
+  background-color: #24468b;
   color: white;
   padding-top: 130px;
   padding-bottom: 70px;
