--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   text-transform: uppercase;
   display: flex;
   justify-content: center;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Baloo Tammudu 2', cursive;
   font-size: 2vw;
   padding: 4px;
   border-radius: 50px;
