--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Baloo+Tammudu+2:wght@800&family=Noto+Sans+JP:wght@900&display=swap');
 .header {
   width: 100%;
   cursor: pointer;
@@ -5,10 +6,12 @@
   display: flex;
   justify-content: center;
   text-transform: uppercase;
-  background-color: #39445a;
-  font-family: "Montserrat", sans-serif;
-  font-size: 5vw;
-  padding-bottom: 15px;
+  /* background-color: #39445a; */
+  background-image: linear-gradient(#39445a,#455880,#39445a);
+  font-family: 'Baloo Tammudu 2', cursive;
+  font-size: 2.5vw;
+  font-weight: bold;
+  /* padding-bottom: 15px; */
   box-shadow: 0px 1px 5px black;
   color: white;
   z-index: 100;
