--- a/src/components/SingleContent/SingleContent.css
+++ b/src/components/SingleContent/SingleContent.css
@@ -7,12 +7,15 @@
   background-color: #282c34;
   border-radius: 10px;
   position: relative;
-  font-family: "Montserrat", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .media:hover {
-  background-color: white;
-  color: black;
+  transition: transform 0.2s;
+  transform: scale(1.2);
+  z-index: 1000;
+  border: 2px solid red;
 }
 
 @media (max-width: 550px) {
