--- a/src/components/Carousel/Carousel.css
+++ b/src/components/Carousel/Carousel.css
@@ -1,11 +1,5 @@
-.carouselItem {
-  display: flex;
-  flex-direction: column;
-  object-fit: contain;
-  padding: 10px;
-}
-.carouselItem__img {
-  border-radius: 10px;
-  margin-bottom: 5px;
-  box-shadow: 0px 0px 5px black;
+.slick-slider {
+  width: 100%;
+  max-width: 720px;
+  /* // The widest it will go on a responsive website */
 }
