--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
 .header {
   width: 100%;
   cursor: pointer;
-  position: fixed;
+  /* position: fixed; */
   display: flex;
   justify-content: center;
   text-transform: uppercase;
@@ -12,9 +12,9 @@
   font-size: 2.5vw;
   font-weight: bold;
   /* padding-bottom: 15px; */
-  box-shadow: 0px 1px 5px black;
+  /* box-shadow: 0px 1px 5px black;
   color: white;
-  z-index: 100;
+  z-index: 100; */
 }
 
 @media (max-width: 1000px) {
