--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,17 @@
     font-size: 6.4vw;
   }
 }
+
+.logout {
+  background-color: red;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border-color: #46b8da;
+}
+
+.mybutton {
+  position: fixed;
+  bottom: 8px;
+  right: 10px;
+}
